Add a friendlier title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: Welcome to the Jeffrey Monsalve's homepage!
+description: "Currently working on Udacity's Data Analysis Nanodegree program, feel free to reach out to me" 
